[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Valves/Finger1Hollow.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Valves/Finger3Hollow.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Valves/Finger2Hollow.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Note.gd" type="Script" id=4]

[node name="Note" type="Node2D"]
script = ExtResource( 4 )

[node name="Finger1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Finger2" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Finger3" type="Sprite" parent="."]
texture = ExtResource( 2 )
